2001-11-21 Ryan Nunn <triforce@merlin.net.au>
	* Makefile.am: Yes I did kill something (backslashes vs slashes)

2001-11-21 Ryan Nunn <triforce@merlin.net.au>
	* README.win32: Typo

2001-11-21 Ryan Nunn <triforce@merlin.net.au>
	* Makefile.am: Added msvcstuff files to EXTRA_DIST
	* README.win32: Added MSVC build instructions.
	* msvcstuff/Zip.dsp: ZIP File support project for MSVC.
	* msvcstuff/Exult?Tools.dsp: Removing Space in filename.
	* msvcstuff/exconfig/exconfig.dsp: Needs to be Binary in CVS.

2001-11-18  Max Horn  <max@quendi.de>

	* audio/midi_drivers/mac_midi.cc: fixed crash on exit when music is disabled

2001-11-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: remove check for zutil.h
	* configure.in: link dynamically against zlib

2001-11-18 Ryan Nunn <triforce@merlin.net.au>
	* actors.cc, gamewin.*, gamerend.cc, objs/chunks.* : Ice Dungeons
	* audio/Audio.cc : can_sfx() also looks for Midi SFX, if compiled
	* files/zip/zip.c : Removed dependency on zutil.h

2001-11-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: fixed broken test on non-MacOSX platforms
	
2001-11-17  Max Horn  <max@quendi.de>

	* Makefile.am, configure.in: made sure MacOS X specific Makefile changes
	are really only used on MacOS X

2001-11-16  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Animated_egg_object): Remove poison/sleep field
	after one use.
	* usecode/ucinternal.cc:  Add_party_items doesn't drop things on
	ground for BG.

2001-11-17  Tristan Tarrant <nadir@users.sourceforge.net>
	* data/sfx_icon.shp: sfx icon from SB-X
	* audio/Audio.*: added can_sfx() method
	* exultmenu.cc: show sfx icons next to menu entries

2001-11-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* imagewin.cc: typo

2001-11-15  Tristan Tarrant <nadir@users.sourceforge.net>
	* exult.cc: search for data file under the executable's directory too

2001-11-14  Jeff Freedman  <jeff@amy.nerble.net>
